--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  built_collection: '>=2.0.0 <5.0.0'
+  built_value: ^7.1.0
   url_launcher: ^5.4.7
   flutter:
     sdk: flutter
@@ -31,6 +33,8 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  build_runner: ^1.0.0
+  built_value_generator: ^7.1.0  
   flutter_test:
     sdk: flutter
 
